# task-vectors

./: .gitattributes  .gitignore  README.md  pyproject.toml
bash_scripts/: main.sh
data/knowledge/: location_country.json  person_language.json
data/linguistic/: antonyms.json  plural_singular.json  singular_plural.json
data/text/knowledge/: country_capital.json  football_player_position.json  location_continent.json  location_language.json  location_religion.json  person_profession.json
data/text/linguistic/: present_simple_gerund.json  present_simple_past_perfect.json  present_simple_past_simple.json
data/text/translation/: en_it.json  es_en.json  fr_en.json  it_en.json
data/translation/: en_es.json  en_fr.json
results/Llama-3.2-1B_text/knowledge/: country_capital_10_demos_5_runs.csv  country_capital_20_demos_5_runs.csv  country_capital_2_demos_5_runs.csv  country_capital_5_demos_5_runs.csv  location_continent_10_demos_5_runs.csv  location_continent_20_demos_5_runs.csv  location_continent_2_demos_5_runs.csv  location_continent_5_demos_5_runs.csv  location_religion_10_demos_5_runs.csv  location_religion_20_demos_5_runs.csv  location_religion_2_demos_5_runs.csv  location_religion_5_demos_5_runs.csv  person_language_10_demos_5_runs.csv  person_language_20_demos_5_runs.csv  person_language_2_demos_5_runs.csv  person_language_5_demos_5_runs.csv
results/Llama-3.2-1B_text/linguistic/: antonyms_10_demos_5_runs.csv  (+15 more)
scripts/: main.py
task_vectors/: constants.py  data.py  model.py  utils.py
task_vectors/models/: llama.py  qwen.py  qwen_utils.py  utils.py
(+16 files in other folders)
