[tool.poetry]
name = "task-vectors"
version = "0.1.0"
description = ""
authors = ["gietema <jochem@giete.ma>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
llama-stack = "^0.0.63"
transformers = "^4.48.0"
click = "^8.1.7"
nltk = "^3.9.1"
accelerate = "^1.2.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
taskipy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
